--- a/XwRemote/Servers/SQL/SQLSettings.resx
+++ b/XwRemote/Servers/SQL/SQLSettings.resx
@@ -693,12 +693,12 @@
   <data name="&gt;&gt;buttonShowPassword.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
     <value>zh-CN</value>
-  </metadata>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
+  </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 12</value>
   </data>
@@ -716,5 +716,14 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="msg_host" xml:space="preserve">
+    <value>Host</value>
+  </data>
+  <data name="msg_name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="msg_not_empty" xml:space="preserve">
+    <value>must not be empty</value>
   </data>
 </root>
